# python_web_frameworks_perf_test

./: .gitignore  Makefile  README.md  cache.py  db.py  docker-compose.yml  orders_service.py  pyproject.toml  schemas.py  script.js
alembic/: env.py
alembic/versions/: 20260127_0001_initial.py
apps/: fastapi_app.py  litestar_app.py  sanic_app.py
go_app/: db.go  go.mod  go.sum  main.go
reports/: fastapi-granian-1.txt  fastapi-granian-2.txt  fastapi-granian-3.txt  fastapi-uvicorn-1.txt  fastapi-uvicorn-2.txt  fastapi-uvicorn-3.txt  gin-1.txt  gin-2.txt  gin-3.txt  litestar-granian-1.txt  litestar-granian-2.txt  litestar-granian-3.txt  litestar-uvicorn-1.txt  litestar-uvicorn-2.txt  litestar-uvicorn-3.txt  sanic-granian-1.txt  sanic-granian-2.txt  sanic-granian-3.txt  sanic-uvicorn-1.txt  sanic-uvicorn-2.txt  sanic-uvicorn-3.txt
scripts/: seed_db.py
