[project]
name = "perf-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18",
    "asyncpg>=0.31",
    "sqlalchemy>=2.0",
    "sanic>=25.12",
    "fastapi>=0.128",
    "litestar>=2.19",
    "uvicorn>=0.40",
    "granian>=2.2",
    "redis>=5.0",
    "pydantic>=2.6",
]
